Updated nav bar and Enemy Intel section, added css to adjust padding when scrolling to the about helldivers 2 section

--- a/style.css
+++ b/style.css
@@ -3,3 +3,8 @@
     height: 300px;
     object-fit: cover;
 }
+
+/* scroll padding to account for sticky navbar when skipping to the about section with the nav*/
+html {
+    scroll-padding-top: 80px;
+}
